Additional Performance Improvements, and some tag cleanup (enforcing docs) [ 1656814 ] Improve Launch Performance
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@2135 ef53c05b-3124-4d59-ae7d-fe3273f42be7